--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
