--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.13.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/material": "^5.16.7",
+    "@react-google-maps/api": "^2.20.3",
+    "@vis.gl/react-google-maps": "^1.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
