--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^5.16.7",
     "@react-google-maps/api": "^2.20.3",
     "@vis.gl/react-google-maps": "^1.3.0",
