--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@vis.gl/react-google-maps": "^1.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-otp-input": "^3.1.1",
